[operator] add logic to monitor 🌶 backups
